UI changes for responsiveness is added

--- a/index.html
+++ b/index.html
@@ -4,36 +4,33 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./build/styles/bundle.css">
     <title>Feedback Form</title>
   </head>
   <body>
 
     <main>
-
       <form class="form" id="index-form" data-form-index="0">
         <div class="form--header-container">
           <h1 class="form--header-title">Fresh Fruits</h1>
         </div>
         <div class="form-content-container">
           <h2>Hi !!</h2>
-          <p>Help us get some insights into the quality of our products</p>
-          <button class="form__btn solid with-right-icon" type="button" onclick="goToFeedBackQuestions(event)">
+          <p>Help us get some insights into the quality of our products. Your feedback would really help us improvise.</p>
+          <button class="form__btn solid with-right-icon proceed-button" type="button" onclick="goToFeedBackQuestions(event)">
             <span>Proceed</span>
             <div class="arrow">
               <div class="line"></div>
               <div class="point"></div>
             </div>            
           </button>
-
         </div>
       </form>
       <form class="form" id="base-form" data-form-index="5">
         <div class="form--header-container">
-          <h1 class="form--header-title">Submit Page</h1>
+          <h1 class="form--header-title">Fresh Fruits</h1>
         </div>
-        <div>
+        <div class="form-content-container">
           <h2>Thank you !!</h2>
           <p>Thanks for helping us to improve with your valueable feedback.</p>
         </div>
