bundle js file is added from netfliy path

--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
       </form>
     </main>
 
-  <script src="/build/js/bundle.js"></script>
+  <script src="/.netlify/functions/server/build/js/bundle.js"></script>
   </body>
 </html>
