UI changes as per design

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./build/styles/bundle.css">
+    <link rel="stylesheet" href="/build/styles/bundle.css">
     <title>Feedback Form</title>
   </head>
   <body>
@@ -15,7 +15,7 @@
           <h1 class="form--header-title">Fresh Fruits</h1>
         </div>
         <div class="form-content-container">
-          <h2>Hi !!</h2>
+          <h2>Hi 👋</h2>
           <p>Help us get some insights into the quality of our products. Your feedback would really help us improvise.</p>
           <button class="form__btn solid with-right-icon proceed-button" type="button" onclick="goToFeedBackQuestions(event)">
             <span>Proceed</span>
@@ -31,8 +31,11 @@
           <h1 class="form--header-title">Fresh Fruits</h1>
         </div>
         <div class="form-content-container">
-          <h2>Thank you !!</h2>
-          <p>Thanks for helping us to improve with your valueable feedback.</p>
+          <div class="check-container">
+            <div class="check-icon"></div>
+          </div>
+          <h2>Thank you!</h2>
+          <p>Thanks for helping us to improve with your valueable feedback.!</p>
         </div>
       </form>
     </main>
